--- a/proyecto/ClientApp/package.json
+++ b/proyecto/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "11.0.3",
     "@angular/platform-server": "^11.0.3",
     "@angular/router": "11.0.3",
+    "@aspnet/signalr": "^1.1.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@popperjs/core": "^2.5.4",
