--- a/proyecto/appsettings.json
+++ b/proyecto/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:osukadesu.database.windows.net,1433;Initial Catalog=Hotelbd;Persist Security Info=False;User ID=osukadesu;Password=Fernandoescachon123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:osukadesu.database.windows.net,1433;Initial Catalog=Hotel7;Persist Security Info=False;User ID=osukadesu;Password=Fernandoescachon123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSetting": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
